added bitminersunion from paraipanakos (no user/pass)

--- a/pool.cfg
+++ b/pool.cfg
@@ -188,3 +188,12 @@ api_method: json
 api_key: validcurrentshares
 api_strip: ','
 url: http://www.unitedminers.com
+
+[bmunion]
+name: bitminersunion.org
+mine_address: pool.bitminersunion.org:8341
+api_address: http://67.249.146.78/stats.php
+api_method:re
+api_key:Shares this round:([ 0-9]+)<br/>
+api_strip:''
+url: http://www.bitminersunion.org/
