Added Eligius API

--- a/pool.cfg
+++ b/pool.cfg
@@ -73,7 +73,10 @@ url: https://www.triplemining.com/stats
 [eligius]
 name: eligius 
 mine_address: su.mining.eligius.st:8337
-#API might be still nice to have here!
+api_address: http://eligius.st/~artefact2/
+api_method: re
+api_key: id="instant_scount_5">([,0-9]+)
+api_strip: ','
 url: http://eligius.st/~artefact2/5/%(user)s
 
 [arsbitcoin] 
