--- a/pool.cfg
+++ b/pool.cfg
@@ -4,24 +4,24 @@
 #  User info + API keys go in user.cfg
 #######################################
 
-[slush]
-name: bitcoin.cz
+[Slush]
+name: Bitcoin.cz
 mine_address: api2.bitcoin.cz:8332
 api_address: http://mining.bitcoin.cz/stats/json/
 api_method: json
 api_key: shares
 url: http://mining.bitcoin.cz/accounts/profile/
 
-[ozco]
-name: ozco.in
+[OzCoin]
+name: OzCo.in
 mine_address: ozco.in:8332
 api_address: https://ozco.in/api.php
 api_method: json
 api_key: shares
 url: https://ozco.in/blocks.php
 
-[polmine]
-name: polmine.pl
+[PolMine]
+name: PolMine.pl
 mine_address: polmine.pl:8347
 api_address: https://polmine.pl/?action=statistics
 api_method: re
@@ -29,32 +29,32 @@ api_key: <b>Ilość poprawnych wszystkich: &nbsp; </b> <br/>([ 0-9]+)<br/> <br/>
 api_strip: ' '
 url: https://polmine.pl/?action=dashboardstat
 
-[mtred]
-name: mtred
+[MtRed]
+name: MtRed.com
 mine_address: mtred.com:8337
 api_address: https://mtred.com/api/user/key/%(mtred_user_apikey)s
 api_method: json
 api_key: server,roundshares
 url: https://mtred.com/user/profile.html
 
-[rfc]
-name: rfcpool.com
+[RFCPool]
+name: RFCPool.com
 mine_address: pool.rfcpool.com:8332 
 api_address: https://www.rfcpool.com/api/pool/stats
 api_method: json
 api_key: poolstats,round_shares
 url: https://www.rfcpool.com/account
 
-[btcmonkey]
-name: bitcoinmonkey.com
+[BitcoinMonkey]
+name: BitcoinMonkey.com
 mine_address: bitcoinmonkey.com:8332
 api_address: https://bitcoinmonkey.com/json/api.php
 api_method: json
 api_key: shares_this_round
 url: https://bitcoinmonkey.com/stats.php
 
-[btcworld]
-name: BTC World
+[BTCWorld]
+name: BTCWorld.com
 mine_address: btcworld.de:8332
 api_address: http://btcworld.de/statistics
 api_method: re
@@ -62,34 +62,34 @@ api_key: Verifizierte\s+Anteile\s+der\s+aktuellen\s+Runde:</th><td>([,0-9]+)
 api_strip: ','
 url: http://btcworld.de/dashboard
 
-[triple]
-name: triplemining.com
+[TripleMining]
+name: TripleMining.com
 mine_address: eu1.triplemining.com:8344
 api_address: http://api.triplemining.com/json/stats
 api_method: json
 api_key: solved
 url: https://www.triplemining.com/stats
 
-[eligius]
-name: eligius 
+[Eligius]
+name: Eligius.st
 mine_address: su.mining.eligius.st:8337
 #API might be still nice to have here!
 url: http://eligius.st/~artefact2/5/%(user)s
 
-[arsbitcoin] 
-name: arsbitcoin
+[ArsBitcoin] 
+name: ArsBitcoin.com
 mine_address: arsbitcoin.com:8344
 #API might be still nice to have here!
 url: https://arsbitcoin.com/stats.php
 
-[bitp]
-name: bitp.it
+[BitPit]
+name: BitP.it
 mine_address: pool.bitp.it:8334
 user_api_address: https://pool.bitp.it/api/user?token=%(bitp_user_apikey)s
 url: https://pool.bitp.it/console
 
-[bitclockers]
-name: bitclockers.com
+[BitClockers]
+name: BitClockers.com
 mine_address: pool.bitclockers.com:8332
 api_address: https://bitclockers.com/api
 api_method: json
@@ -97,24 +97,24 @@ api_key: roundshares
 user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
 url: https://bitclockers.com
 
-[nofeemining]
-name: nofeemining.com
+[NoFeeMining]
+name: NoFeeMining.com
 mine_address: nofeemining.com:8332 
 api_address: https://www.nofeemining.com/api.php?key%(nofeemining_user_apikey)s
 api_method: json
 api_key: poolRoundShares
 url: https://www.nofeemining.com
 
-[poolmunity]
-name: poolmunity.com
+[PoolMunity]
+name: PoolMunity.com
 mine_address: poolmunity.com:8332
 api_address: https://poolmunity.com/api.php?server
 api_method: json
 api_key: totalShares
 url: http://poolmunity.com
 
-[bitparking]
-name: bitparking.com
+[BitParking]
+name: BitParking.com
 namecoin: Yep
 mine_address: bitparking.com:9098
 api_address: http://bitparking.com/pool
@@ -124,23 +124,23 @@ api_strip: ' '
 url: http://bitparking.com/user/%(user)s
 
 [x8s]
-name: btc.x8s.de
+name: x8s.de
 mine_address: pit.x8s.de:8337
 api_address: http://btc.x8s.de/api/global.json
 api_method: json
 api_key: round_shares
 url: http://btc.x8s.de
 
-[bclc]
-name: bitcoins.lc
+[Bclc]
+name: Bitcoins.lc
 mine_address: bitcoins.lc:8080    
 api_address: https://www.bitcoins.lc/stats.json
 api_method: json
 api_key: round_shares
 url: https://www.bitcoins.lc
 
-[btcg]
-name: BTC Guild  
+[BTCGuild]
+name: BTCGuild.com
 mine_address: us.btcguild.com:8332   
 api_address: https://www.btcguild.com/pool_stats.php 
 user_api_address: https://www.btcguild.com/api.php?api_key=%(btcguild_user_apikey)s 
@@ -148,40 +148,40 @@ api_method: json
 api_key: round_shares
 url: https://www.btcguild.com
 
-[mineco]
-name: mineco.in
+[MineCoin]
+name: MineCo.in
 mine_address: mineco.in:3000 
 api_address: https://mineco.in/stats.json 
 api_method: json
 api_key: shares_this_round
 url: https://mineco.in
 
-[eclipsemc]
-name: eclipsemc.com
+[EclipseMC]
+name: EclipseMC.com
 mine_address: pacrim.eclipsemc.com:8337
 api_address: https://eclipsemc.com/api.php?key=%(eclipsemc_apikey)s&action=poolstats
 api_method: json_ec
 api_key: round_shares
 url: https://eclipsemc.com
 
-[mmf]
-name: mining.mainframe.nl
+[MMC]
+name: Mining.Mainframe.nl
 mine_address: mining.mainframe.nl:8343 
 api_method:json
 api_key: shares_this_round
 api_address: http://mining.mainframe.nl/api
 url: http://mining.mainframe.nl
 
-[bcpool]
-name: bitcoinpool.com
+[BitcoinPool]
+name: BitcoinPool.com
 mine_address: bitcoinpool.com:8334 
 api_address: http://bitcoinpool.com/pooljson.php
 api_method: json
 api_key: round_shares
 url: http://bitcoinpool.com
 
-[unitedminers]
-name: unitedminers.com
+[UnitedMiners]
+name: UnitedMiners.com
 mine_address: pool.unitedminers.com:8332 
 api_address: http://www.unitedminers.com/?action=api
 api_method: json
@@ -189,8 +189,8 @@ api_key: validcurrentshares
 api_strip: ','
 url: http://www.unitedminers.com
 
-[bmunion]
-name: bitminersunion.org
+[BMUnion]
+name: BitMinersUnion.org
 mine_address: pool.bitminersunion.org:8341
 api_address: http://67.249.146.78/stats.php
 api_method:re
