--- a/pool.cfg
+++ b/pool.cfg
@@ -202,7 +202,16 @@ url: http://www.unitedminers.com
 name: bitminersunion.org
 mine_address: pool.bitminersunion.org:8341
 api_address: http://67.249.146.78/stats.php
-api_method:re
-api_key:Shares this round:([ 0-9]+)<br/>
-api_strip:''
+api_method: re
+api_key: Shares this round:([ 0-9]+)<br/>
+api_strip: ' '
+url: http://www.bitminersunion.org/
+
+[BTCPool24]
+name: BTCPool24
+mine_address: min.btcpool24.com:8338
+api_address: http://www.btcpool24.com/stats.php
+api_method: re
+api_key: <br>Runden Shares:([ 0-9]+)<br>
+api_strip: ' '
 url: http://www.bitminersunion.org/
