--- a/pool.cfg
+++ b/pool.cfg
@@ -214,4 +214,4 @@ api_address: http://www.btcpool24.com/stats.php
 api_method: re
 api_key: <br>Runden Shares:([ 0-9]+)<br>
 api_strip: ' '
-url: http://www.bitminersunion.org/
+url: http://www.btcpool24.com/
