Api fix for backup pools

--- a/pool.cfg
+++ b/pool.cfg
@@ -58,7 +58,7 @@ name: BTC World
 mine_address: btcworld.de:8332
 api_address: http://btcworld.de/statistics
 api_method: re
-api_key: Verifizierte\s+Anteile\s+der\s+aktuellen\s+Runde:</th><td>([,0-9]+)
+api_key: Verifizierte\s+Anteile\s+der\s+aktuellen\s+Runde:</th><td>([,0-9]+)</td>
 api_strip: ','
 url: http://btcworld.de/dashboard
 
@@ -75,7 +75,7 @@ name: eligius
 mine_address: su.mining.eligius.st:8337
 api_address: http://eligius.st/~artefact2/
 api_method: re
-api_key: id="instant_scount_5">([,0-9]+)
+api_key: id="instant_scount_5">([,0-9]+)</td>
 api_strip: ','
 url: http://eligius.st/~artefact2/5/%(user)s
 
@@ -84,7 +84,7 @@ name: arsbitcoin
 mine_address: arsbitcoin.com:8344
 api_address: https://arsbitcoin.com/stats.php
 api_method: re
-api_key: Shares this round</td><td>([,0-9]+)
+api_key: Shares this round</td><td>([,0-9]+)</td>
 api_strip: ','
 url: https://arsbitcoin.com/stats.php
 
