switched btcpool24 to json

--- a/pools.cfg
+++ b/pools.cfg
@@ -210,8 +210,7 @@ url: http://www.bitminersunion.org/
 [BTCPool24]
 name: BTCPool24
 mine_address: min.btcpool24.com:8338
-api_address: http://www.btcpool24.com/stats.php
-api_method: re
-api_key: <br>Runden Shares:([ 0-9]+)<br>
-api_strip: ' '
+api_address: http://www.btcpool24.com/json_stats.php
+api_method: json
+api_key: shares_this_round
 url: http://www.btcpool24.com/
