Added pool ninjacoin as backup - PPS

--- a/pool.cfg
+++ b/pool.cfg
@@ -97,6 +97,16 @@ api_key: shares
 user_api_address: https://pool.bitp.it/api/user?token=%(bitp_user_apikey)s
 url: https://pool.bitp.it/console
 
+[ninjac]
+name: ninjacoin.com
+mine_address: mine.ninjacoin.com:8332
+api_address: https://www.ninjacoin.com/statistics.php
+api_method: re
+#can't find the share count on their site
+api_key:Hashrate: ([.0-9]+) Gh/s
+api_strip: '.'
+url: https://www.ninjacoin.com/account.php
+
 [bitclockers]
 name: bitclockers.com
 mine_address: pool.bitclockers.com:8332
