REVERT following changes due to advice from Sukrim and recent developments. Comment out disabled pools in pool.cfg and user.cfg.default (reverse-merged from commit 4a7c22248ebfe1c40024277c4d4811ec1ea3477a)

--- a/pool.cfg
+++ b/pool.cfg
@@ -105,31 +105,31 @@ api_method: json
 api_key: poolRoundShares
 url: https://www.nofeemining.com
 
-#[PoolMunity]
-#name: PoolMunity.com
-#mine_address: poolmunity.com:8332
-#api_address: https://poolmunity.com/api.php?server
-#api_method: json
-#api_key: totalShares
-#url: http://poolmunity.com
+[PoolMunity]
+name: PoolMunity.com
+mine_address: poolmunity.com:8332
+api_address: https://poolmunity.com/api.php?server
+api_method: json
+api_key: totalShares
+url: http://poolmunity.com
 
-#[BitParking]
-#name: BitParking.com
-#namecoin: Yep
-#mine_address: bitparking.com:9098
-#api_address: http://bitparking.com/pool
-#api_method: re
-#api_key: block</td><td>([ 0-9]+)</td>
-#api_strip: ' '
-#url: http://bitparking.com/user/%(user)s
+[BitParking]
+name: BitParking.com
+namecoin: Yep
+mine_address: bitparking.com:9098
+api_address: http://bitparking.com/pool
+api_method: re
+api_key: block</td><td>([ 0-9]+)</td>
+api_strip: ' '
+url: http://bitparking.com/user/%(user)s
 
-#[x8s]
-#name: x8s.de
-#mine_address: pit.x8s.de:8337
-#api_address: http://btc.x8s.de/api/global.json
-#api_method: json
-#api_key: round_shares
-#url: http://btc.x8s.de
+[x8s]
+name: x8s.de
+mine_address: pit.x8s.de:8337
+api_address: http://btc.x8s.de/api/global.json
+api_method: json
+api_key: round_shares
+url: http://btc.x8s.de
 
 [Bclc]
 name: Bitcoins.lc
@@ -139,38 +139,38 @@ api_method: json
 api_key: round_shares
 url: https://www.bitcoins.lc
 
-#[BTCGuild]
-#name: BTCGuild.com
-#mine_address: us.btcguild.com:8332   
-#api_address: https://www.btcguild.com/pool_stats.php 
-#user_api_address: https://www.btcguild.com/api.php?api_key=%(btcguild_user_apikey)s 
-#api_method: json
-#api_key: round_shares
-#url: https://www.btcguild.com
+[BTCGuild]
+name: BTCGuild.com
+mine_address: us.btcguild.com:8332   
+api_address: https://www.btcguild.com/pool_stats.php 
+user_api_address: https://www.btcguild.com/api.php?api_key=%(btcguild_user_apikey)s 
+api_method: json
+api_key: round_shares
+url: https://www.btcguild.com
 
-#[MineCoin]
-#name: MineCo.in
-#mine_address: mineco.in:3000 
-#api_address: https://mineco.in/stats.json 
-#api_method: json
-#api_key: shares_this_round
-#url: https://mineco.in
+[MineCoin]
+name: MineCo.in
+mine_address: mineco.in:3000 
+api_address: https://mineco.in/stats.json 
+api_method: json
+api_key: shares_this_round
+url: https://mineco.in
 
-#[EclipseMC]
-#name: EclipseMC.com
-#mine_address: pacrim.eclipsemc.com:8337
-#api_address: https://eclipsemc.com/api.php?key=%(eclipsemc_apikey)s&action=poolstats
-#api_method: json_ec
-#api_key: round_shares
-#url: https://eclipsemc.com
+[EclipseMC]
+name: EclipseMC.com
+mine_address: pacrim.eclipsemc.com:8337
+api_address: https://eclipsemc.com/api.php?key=%(eclipsemc_apikey)s&action=poolstats
+api_method: json_ec
+api_key: round_shares
+url: https://eclipsemc.com
 
-#[MMC]
-#name: Mining.Mainframe.nl
-#mine_address: mining.mainframe.nl:8343 
-#api_method:json
-#api_key: shares_this_round
-#api_address: http://mining.mainframe.nl/api
-#url: http://mining.mainframe.nl
+[MMC]
+name: Mining.Mainframe.nl
+mine_address: mining.mainframe.nl:8343 
+api_method:json
+api_key: shares_this_round
+api_address: http://mining.mainframe.nl/api
+url: http://mining.mainframe.nl
 
 [BitcoinPool]
 name: BitcoinPool.com
@@ -180,14 +180,14 @@ api_method: json
 api_key: round_shares
 url: http://bitcoinpool.com
 
-#[UnitedMiners]
-#name: UnitedMiners.com
-#mine_address: pool.unitedminers.com:8332 
-#api_address: http://www.unitedminers.com/?action=api
-#api_method: json
-#api_key: validcurrentshares
-#api_strip: ','
-#url: http://www.unitedminers.com
+[UnitedMiners]
+name: UnitedMiners.com
+mine_address: pool.unitedminers.com:8332 
+api_address: http://www.unitedminers.com/?action=api
+api_method: json
+api_key: validcurrentshares
+api_strip: ','
+url: http://www.unitedminers.com
 
 [BMUnion]
 name: BitMinersUnion.org
