--- a/pool.cfg
+++ b/pool.cfg
@@ -217,11 +217,11 @@ api_key: Shares this round:([ 0-9]+)<br/>
 api_strip: ' '
 url: http://www.bitminersunion.org/
 
-[BTCPool24]
+[btcpool24]
 name: BTCPool24
 mine_address: min.btcpool24.com:8338
-api_address: http://www.btcpool24.com/stats.php
-api_method: re
-api_key: <br>Runden Shares:([ 0-9]+)<br>
+api_address: http://www.btcpool24.com/json_stats.php
+api_method: json
+api_key: shares_this_round
 api_strip: ' '
 url: http://www.btcpool24.com/
