Changed case on internal pool name, stats page name not affected

--- a/pool.cfg
+++ b/pool.cfg
@@ -4,7 +4,7 @@
 #  User info + API keys go in user.cfg
 #######################################
 
-[Slush]
+[slush]
 name: Bitcoin.cz
 mine_address: api2.bitcoin.cz:8332
 api_address: http://mining.bitcoin.cz/stats/json/
@@ -12,7 +12,7 @@ api_method: json
 api_key: shares
 url: http://mining.bitcoin.cz/accounts/profile/
 
-[OzCoin]
+[ozco]
 name: OzCo.in
 mine_address: ozco.in:8332
 api_address: https://ozco.in/api.php
@@ -20,7 +20,7 @@ api_method: json
 api_key: shares
 url: https://ozco.in/blocks.php
 
-[PolMine]
+[polmine]
 name: PolMine.pl
 mine_address: polmine.pl:8347
 api_address: https://polmine.pl/?action=statistics
@@ -29,7 +29,7 @@ api_key: <b>Ilość poprawnych wszystkich: &nbsp; </b> <br/>([ 0-9]+)<br/> <br/>
 api_strip: ' '
 url: https://polmine.pl/?action=dashboardstat
 
-[MtRed]
+[mtred]
 name: MtRed.com
 mine_address: mtred.com:8337
 api_address: https://mtred.com/api/user/key/%(mtred_user_apikey)s
@@ -37,7 +37,7 @@ api_method: json
 api_key: server,roundshares
 url: https://mtred.com/user/profile.html
 
-[RFCPool]
+[rfc]
 name: RFCPool.com
 mine_address: pool.rfcpool.com:8332 
 api_address: https://www.rfcpool.com/api/pool/stats
@@ -45,7 +45,7 @@ api_method: json
 api_key: poolstats,round_shares
 url: https://www.rfcpool.com/account
 
-[BitcoinMonkey]
+[btcmonkey]
 name: BitcoinMonkey.com
 mine_address: bitcoinmonkey.com:8332
 api_address: https://bitcoinmonkey.com/json/api.php
@@ -53,7 +53,7 @@ api_method: json
 api_key: shares_this_round
 url: https://bitcoinmonkey.com/stats.php
 
-[BTCWorld]
+[btcworld]
 name: BTCWorld.com
 mine_address: btcworld.de:8332
 api_address: http://btcworld.de/statistics
@@ -62,7 +62,7 @@ api_key: Verifizierte\s+Anteile\s+der\s+aktuellen\s+Runde:</th><td>([,0-9]+)</td
 api_strip: ','
 url: http://btcworld.de/dashboard
 
-[TripleMining]
+[triple]
 name: TripleMining.com
 mine_address: eu1.triplemining.com:8344
 api_address: http://api.triplemining.com/json/stats
@@ -70,7 +70,7 @@ api_method: json
 api_key: solved
 url: https://www.triplemining.com/stats
 
-[Eligius]
+[eligius]
 name: Eligius.st
 mine_address: su.mining.eligius.st:8337
 api_address: http://eligius.st/~artefact2/
@@ -79,7 +79,7 @@ api_key: id="instant_scount_5">([,0-9]+)</td>
 api_strip: ','
 url: http://eligius.st/~artefact2/5/%(user)s
 
-[ArsBitcoin] 
+[arsbitcoin]
 name: ArsBitcoin.com
 mine_address: arsbitcoin.com:8344
 api_address: https://arsbitcoin.com/stats.php
@@ -88,7 +88,7 @@ api_key: Shares this round</td><td>([,0-9]+)</td>
 api_strip: ','
 url: https://arsbitcoin.com/stats.php
 
-[BitPit]
+[bitp]
 name: BitP.it
 mine_address: pool.bitp.it:8334
 api_address: https://pool.bitp.it/api/pool?token=%(bitp_user_apikey)s
@@ -97,7 +97,7 @@ api_key: shares
 user_api_address: https://pool.bitp.it/api/user?token=%(bitp_user_apikey)s
 url: https://pool.bitp.it/console
 
-[NinjaCoin]
+[ninjac]
 name: NinjaCoin.com
 mine_address: mine.ninjacoin.com:8332
 api_address: https://www.ninjacoin.com/statistics.php
@@ -107,7 +107,7 @@ api_key:Hashrate: ([.0-9]+) Gh/s
 api_strip: '.'
 url: https://www.ninjacoin.com/account.php
 
-[BitClockers]
+[bitclockers]
 name: BitClockers.com
 mine_address: pool.bitclockers.com:8332
 api_address: https://bitclockers.com/api
@@ -116,7 +116,7 @@ api_key: roundshares
 user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
 url: https://bitclockers.com
 
-[NoFeeMining]
+[nofeemining]
 name: NoFeeMining.com
 mine_address: nofeemining.com:8332 
 api_address: https://www.nofeemining.com/api.php?key%(nofeemining_user_apikey)s
@@ -124,7 +124,7 @@ api_method: json
 api_key: poolRoundShares
 url: https://www.nofeemining.com
 
-[PoolMunity]
+[poolmunity]
 name: PoolMunity.com
 mine_address: poolmunity.com:8332
 api_address: https://poolmunity.com/api.php?server
@@ -132,7 +132,7 @@ api_method: json
 api_key: totalShares
 url: http://poolmunity.com
 
-[BitParking]
+[bitparking]
 name: BitParking.com
 namecoin: Yep
 mine_address: bitparking.com:9098
@@ -150,7 +150,7 @@ api_method: json
 api_key: round_shares
 url: http://btc.x8s.de
 
-[Bclc]
+[bclc]
 name: Bitcoins.lc
 mine_address: bitcoins.lc:8080    
 api_address: https://www.bitcoins.lc/stats.json
@@ -158,7 +158,7 @@ api_method: json
 api_key: round_shares
 url: https://www.bitcoins.lc
 
-[BTCGuild]
+[btcg]
 name: BTCGuild.com
 mine_address: us.btcguild.com:8332   
 api_address: https://www.btcguild.com/pool_stats.php 
@@ -167,7 +167,7 @@ api_method: json
 api_key: round_shares
 url: https://www.btcguild.com
 
-[MineCoin]
+[mineco]
 name: MineCo.in
 mine_address: mineco.in:3000 
 api_address: https://mineco.in/stats.json 
@@ -175,7 +175,7 @@ api_method: json
 api_key: shares_this_round
 url: https://mineco.in
 
-[EclipseMC]
+[eclipsemc]
 name: EclipseMC.com
 mine_address: pacrim.eclipsemc.com:8337
 api_address: https://eclipsemc.com/api.php?key=%(eclipsemc_apikey)s&action=poolstats
@@ -183,7 +183,7 @@ api_method: json_ec
 api_key: round_shares
 url: https://eclipsemc.com
 
-[MMC]
+[mmf]
 name: Mining.Mainframe.nl
 mine_address: mining.mainframe.nl:8343 
 api_method:json
@@ -191,7 +191,7 @@ api_key: shares_this_round
 api_address: http://mining.mainframe.nl/api
 url: http://mining.mainframe.nl
 
-[BitcoinPool]
+[bcpool]
 name: BitcoinPool.com
 mine_address: bitcoinpool.com:8334 
 api_address: http://bitcoinpool.com/pooljson.php
@@ -199,7 +199,7 @@ api_method: json
 api_key: round_shares
 url: http://bitcoinpool.com
 
-[UnitedMiners]
+[unitedminers]
 name: UnitedMiners.com
 mine_address: pool.unitedminers.com:8332 
 api_address: http://www.unitedminers.com/?action=api
@@ -208,7 +208,7 @@ api_key: validcurrentshares
 api_strip: ','
 url: http://www.unitedminers.com
 
-[BMUnion]
+[bmunion]
 name: BitMinersUnion.org
 mine_address: pool.bitminersunion.org:8341
 api_address: http://67.249.146.78/stats.php
@@ -217,11 +217,10 @@ api_key: Shares this round:([ 0-9]+)<br/>
 api_strip: ' '
 url: http://www.bitminersunion.org/
 
-[BTCPool24]
+[btcpool24]
 name: BTCPool24
 mine_address: min.btcpool24.com:8338
-api_address: http://www.btcpool24.com/stats.php
-api_method: re
-api_key: <br>Runden Shares:([ 0-9]+)<br>
-api_strip: ' '
+api_address: http://www.btcpool24.com/json_stats.php
+api_method: json
+api_key: shares_this_round
 url: http://www.btcpool24.com/
