--- a/pools.cfg
+++ b/pools.cfg
@@ -224,3 +224,12 @@ api_address: http://www.btcpool24.com/json_stats.php
 api_method: json
 api_key: shares_this_round
 url: http://www.btcpool24.com/
+
+[btcserv]
+name: BTCServ.net
+mine_address: btcserv.net:8335
+api_address: http://btcserv.net/
+api_method:re
+api_key:([0-9]+(,[0-9]+)*) shares
+api_strip:','
+url: https://btcserv.net/user/stats/
