--- a/pools.cfg
+++ b/pools.cfg
@@ -233,3 +233,13 @@ api_method:re
 api_key:([0-9]+(,[0-9]+)*) shares
 api_strip:','
 url: https://btcserv.net/user/stats/
+
+[bloodys]
+name: bloodys
+mine_address:pool.bloodys.com:8332
+api_address:http://pool.bloodys.com/?action=statistics
+role:mine
+api_method:re
+api_key:([0-9]+(,[0-9]+)*) Shares
+api_strip:','
+url: http://pool.bloodys.com/?action=dashboard
