Nofee server update

--- a/pools.cfg
+++ b/pools.cfg
@@ -118,7 +118,7 @@ url: https://bitclockers.com
 
 [nofeemining]
 name: nofeemining.com
-mine_address: nofeemining.com:8332 
+mine_address: nofeemining.appspot.com:80
 api_address: https://www.nofeemining.com/api.php?key%(nofeemining_user_apikey)s
 api_method: json
 api_key: poolRoundShares
