Update arsbitcoin url:

--- a/pools.cfg
+++ b/pools.cfg
@@ -86,7 +86,7 @@ api_address: https://arsbitcoin.com/stats.php
 api_method: re
 api_key: Shares this round</td><td>([,0-9]+)</td>
 api_strip: ','
-url: https://arsbitcoin.com/stats.php
+url: https://arsbitcoin.com/my_stats.php
 
 [bitp]
 name: bitp.it
