Btcworld.de display name fix

--- a/pools.cfg
+++ b/pools.cfg
@@ -54,7 +54,7 @@ api_key: shares_this_round
 url: https://bitcoinmonkey.com/stats.php
 
 [btcworld]
-name: BTCWorld.com
+name: BTCWorld.de
 mine_address: btcworld.de:8332
 api_address: http://btcworld.de/statistics
 api_method: re
