Added digbtc, thanks MaGNeT

--- a/pools.cfg
+++ b/pools.cfg
@@ -243,3 +243,11 @@ api_method:re
 api_key:([0-9]+(,[0-9]+)*) Shares
 api_strip:','
 url: http://pool.bloodys.com/?action=dashboard
+
+[digbtc]
+name: DigBTC.net
+mine_address: digbtc.net:8332
+api_address:http://digbtc.net/
+api_method:re
+api_key:Round Shares: <b>([ 0-9]+)</b>
+url: http://www.digbtc.net/main.php
