--- a/pools.cfg
+++ b/pools.cfg
@@ -251,3 +251,11 @@ api_address:http://digbtc.net/
 api_method:re
 api_key:Round Shares: <b>([ 0-9]+)</b>
 url: http://www.digbtc.net/main.php
+
+[bithasher]
+name: BitHasher.com
+mine_address: bithasher.com:8332
+api_address: http://bithasher.com
+api_method:re
+api_key: Round Shares</td><td>([,0-9]+)<
+url: http://bithasher.com/index.php/account
