Digbtc.net aka DigBIT edit in pools.cfg

--- a/pools.cfg
+++ b/pools.cfg
@@ -245,7 +245,7 @@ api_strip:','
 url: http://pool.bloodys.com/?action=dashboard
 
 [digbtc]
-name: DigBTC.net
+name: DigBTC.net (DigBIT)
 mine_address: digbtc.net:8332
 api_address:http://digbtc.net/
 api_method:re
