--- a/pools.cfg
+++ b/pools.cfg
@@ -221,10 +221,10 @@ url: http://www.bitminersunion.org/
 [btcpool24]
 name: BTCPool24
 mine_address: min.btcpool24.com:8338
-api_address: http://www.btcpool24.com/json_stats.php
-api_method: json
-api_key: shares_this_round
-url: http://www.btcpool24.com/
+api_address: http://www.btcpool24.com/stat.php
+api_method: re
+api_key:<br/>Round Shares:([ 0-9]+)<br/><br/></span>
+api_strip: ' '
 
 [btcserv]
 name: BTCServ.net
