--- a/pools.cfg
+++ b/pools.cfg
@@ -221,6 +221,9 @@ url: http://www.bitminersunion.org/
 [btcpool24]
 name: BTCPool24
 mine_address: min.btcpool24.com:8338
+#api_address: http://www.btcpool24.com/json_stats.php
+#api_method: json
+#api_key: shares_this_round
 api_address: http://www.btcpool24.com/stat.php
 api_method: re
 api_key:<br/>Round Shares:([ 0-9]+)<br/><br/></span>
