update bitclockers api to not use https

--- a/pools.cfg
+++ b/pools.cfg
@@ -110,7 +110,7 @@ url: https://www.ninjacoin.com/account.php
 [bitclockers]
 name: BitClockers.com
 mine_address: pool.bitclockers.com:8332
-api_address: https://bitclockers.com/api
+api_address: https//bitclockers.com/api.json
 api_method: json
 api_key: roundshares
 user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
