Added deepbit as backup

--- a/pools.cfg
+++ b/pools.cfg
@@ -12,6 +12,15 @@ api_method: json
 api_key: shares
 url: http://mining.bitcoin.cz/accounts/profile/
 
+[deepbit]
+name: DeepBit
+mine_address: pit.deepbit.net:8332
+api_address: https://deepbit.net/
+api_method: re
+api_key: rate:([ 0-9]+)Gh/s<
+api_strip: ' '
+url: https://deepbit.net/account
+
 [ozco]
 name: OzCo.in
 mine_address: ozco.in:8332
