Added hashrate to the userdata

--- a/pools.cfg
+++ b/pools.cfg
@@ -4,6 +4,14 @@
 #  User info + API keys go in user.cfg
 #######################################
 
+[kiwi]
+name: kiwipool.me
+mine_address: pool2.kiwipool.me:8332
+api_address: https://kiwipoolme1.appspot.com/json/sbueahpcwehqhdmpykllbyubllxyvyuz 
+api_method: json
+api_key: total_round_shares
+url: http://www.kiwipool.me/
+
 [slush]
 name: Bitcoin.cz
 mine_address: api2.bitcoin.cz:8332
@@ -11,15 +19,6 @@ api_address: http://mining.bitcoin.cz/stats/json/
 api_method: json
 api_key: shares
 url: http://mining.bitcoin.cz/accounts/profile/
-
-[deepbit]
-name: DeepBit
-mine_address: pit.deepbit.net:8332
-api_address: https://deepbit.net/
-api_method: re
-api_key: rate:([ 0-9]+)Gh/s<
-api_strip: ' '
-url: https://deepbit.net/account
 
 [ozco]
 name: OzCo.in
@@ -119,7 +118,7 @@ url: https://www.ninjacoin.com/account.php
 [bitclockers]
 name: BitClockers.com
 mine_address: pool.bitclockers.com:8332
-api_address: http://bitclockers.com/api.json
+api_address: https://bitclockers.com/api
 api_method: json
 api_key: roundshares
 user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
@@ -230,9 +229,6 @@ url: http://www.bitminersunion.org/
 [btcpool24]
 name: BTCPool24
 mine_address: min.btcpool24.com:8338
-#api_address: http://www.btcpool24.com/json_stats.php
-#api_method: json
-#api_key: shares_this_round
 api_address: http://www.btcpool24.com/stat.php
 api_method: re
 api_key:<br/>Round Shares:([ 0-9]+)<br/><br/></span>
