Added kiwipool, thanks user7516

--- a/pools.cfg
+++ b/pools.cfg
@@ -271,3 +271,13 @@ api_address: http://bithasher.com
 api_method:re
 api_key: Round Shares</td><td>([,0-9]+)<
 url: http://bithasher.com/index.php/account
+
+[kiwipool]
+name: KiwiPool.me
+mine_address: pool2.kiwipool.me:8332
+api_address: http://5.hidemyass.com/ip-1/encoded/Oi8vd3d3Lmtpd2lwb29sLm1l&f=norefer
+api_method: re
+api_key: [:0-9]+[,]([0-9]+)
+api_strip:''
+url: http://www.kiwipool.me
+
