--- a/pools.cfg
+++ b/pools.cfg
@@ -7,9 +7,13 @@
 [kiwi]
 name: kiwipool.me
 mine_address: pool2.kiwipool.me:8332
-api_address: https://kiwipoolme1.appspot.com/json/sbueahpcwehqhdmpykllbyubllxyvyuz 
-api_method: json
-api_key: total_round_shares
+#api_address: https://kiwipoolme1.appspot.com/json/sbueahpcwehqhdmpykllbyubllxyvyuz 
+#api_method: json
+#api_key: total_round_shares
+api_address: http://5.hidemyass.com/ip-1/encoded/Oi8vd3d3Lmtpd2lwb29sLm1l&f=norefer
+api_method: re
+api_key: [:0-9]+[,]([0-9]+)
+api_strip:''
 url: http://www.kiwipool.me/
 
 [slush]
