--- a/pools.cfg
+++ b/pools.cfg
@@ -4,18 +4,6 @@
 #  User info + API keys go in user.cfg
 #######################################
 
-[kiwi]
-name: kiwipool.me
-mine_address: pool2.kiwipool.me:8332
-#api_address: https://kiwipoolme1.appspot.com/json/sbueahpcwehqhdmpykllbyubllxyvyuz 
-#api_method: json
-#api_key: total_round_shares
-api_address: http://5.hidemyass.com/ip-1/encoded/Oi8vd3d3Lmtpd2lwb29sLm1l&f=norefer
-api_method: re
-api_key: [:0-9]+[,]([0-9]+)
-api_strip:''
-url: http://www.kiwipool.me/
-
 [slush]
 name: Bitcoin.cz
 mine_address: api2.bitcoin.cz:8332
@@ -23,6 +11,15 @@ api_address: http://mining.bitcoin.cz/stats/json/
 api_method: json
 api_key: shares
 url: http://mining.bitcoin.cz/accounts/profile/
+
+[deepbit]
+name: DeepBit
+mine_address: pit.deepbit.net:8332
+api_address: https://deepbit.net/
+api_method: re
+api_key: rate:([ 0-9]+)Gh/s<
+api_strip: ' '
+url: https://deepbit.net/account
 
 [ozco]
 name: OzCo.in
@@ -122,7 +119,7 @@ url: https://www.ninjacoin.com/account.php
 [bitclockers]
 name: BitClockers.com
 mine_address: pool.bitclockers.com:8332
-api_address: https://bitclockers.com/api
+api_address: http://bitclockers.com/api.json
 api_method: json
 api_key: roundshares
 user_api_address: https://bitclockers.com/api/%(bitclockers_user_apikey)s
@@ -233,6 +230,9 @@ url: http://www.bitminersunion.org/
 [btcpool24]
 name: BTCPool24
 mine_address: min.btcpool24.com:8338
+#api_address: http://www.btcpool24.com/json_stats.php
+#api_method: json
+#api_key: shares_this_round
 api_address: http://www.btcpool24.com/stat.php
 api_method: re
 api_key:<br/>Round Shares:([ 0-9]+)<br/><br/></span>
