Added itzod.ru, thanks rino & balthazar

--- a/pools.cfg
+++ b/pools.cfg
@@ -281,3 +281,11 @@ api_key: [:0-9]+[,]([0-9]+)
 api_strip:''
 url: http://www.kiwipool.me
 
+[itzod]
+name: Itzod.ru
+mine_address: lp1.itzod.ru:8344
+api_address: http://pool.itzod.ru/api.php
+api_method: json
+api_key: total_shares_count
+url: http://pool.itzod.ru/index.php
+
