Change url: btcguild

--- a/pools.cfg
+++ b/pools.cfg
@@ -175,7 +175,7 @@ api_address: https://www.btcguild.com/pool_stats.php
 user_api_address: https://www.btcguild.com/api.php?api_key=%(btcguild_user_apikey)s 
 api_method: json
 api_key: round_shares
-url: https://www.btcguild.com
+url: https://www.btcguild.com/my_account.php
 
 [mineco]
 name: MineCo.in
