Change url: mineco

--- a/pools.cfg
+++ b/pools.cfg
@@ -183,7 +183,7 @@ mine_address: mineco.in:3000
 api_address: https://mineco.in/stats.json 
 api_method: json
 api_key: shares_this_round
-url: https://mineco.in
+url: https://mineco.in/workers
 
 [eclipsemc]
 name: EclipseMC.com
