Added btcmine.com, thanks joulesbeef

--- a/pools.cfg
+++ b/pools.cfg
@@ -289,3 +289,11 @@ api_method: json
 api_key: total_shares_count
 url: http://pool.itzod.ru/index.php
 
+[btcmine]
+name: BTCmine
+api_address: http://btcmine.com/stats/
+api_method:re
+api_key: <td><span id="rs_round_shares">([0-9]+)</span></td>
+api_strip:''
+url: http://btcmine.com
+
