Changed arsbitcoin api address

--- a/pools.cfg
+++ b/pools.cfg
@@ -91,7 +91,7 @@ url: http://eligius.st/~artefact2/5/%(user)s
 [arsbitcoin]
 name: ArsBitcoin.com
 mine_address: arsbitcoin.com:8344
-api_address: https://arsbitcoin.com/stats.php
+api_address: https://arsbitcoin.com/poolstats.php
 api_method: re
 api_key: Shares this round</td><td>([,0-9]+)</td>
 api_strip: ','
@@ -261,7 +261,7 @@ name: DigBTC.net (DigBIT)
 mine_address: digbtc.net:8332
 api_address:http://digbtc.net/
 api_method:re
-api_key:Round Shares: <b>([ 0-9]+)</b>
+api_key:[Round Shares: <b>]+([0-9]+)</b>
 url: http://www.digbtc.net/main.php
 
 [bithasher]
