Revert digbit api key

--- a/pools.cfg
+++ b/pools.cfg
@@ -261,7 +261,7 @@ name: DigBTC.net (DigBIT)
 mine_address: digbtc.net:8332
 api_address:http://digbtc.net/
 api_method:re
-api_key:[Round Shares: <b>]+([0-9]+)</b>
+api_key:Round Shares: <b>([0-9]+)</b>
 url: http://www.digbtc.net/main.php
 
 [bithasher]
