--- a/pools.cfg
+++ b/pools.cfg
@@ -15,8 +15,8 @@ url: http://mining.bitcoin.cz/accounts/profile/
 [deepbit]
 name: DeepBit
 mine_address: pit.deepbit.net:8332
-api_address: https://deepbit.net/
-api_method: re
+api_address: http://deepbit.net/
+api_method: re_rate
 api_key: rate:([ 0-9]+)Gh/s<
 api_strip: ' '
 url: https://deepbit.net/account
