Estimated shares for btcguild

--- a/pools.cfg
+++ b/pools.cfg
@@ -171,10 +171,9 @@ url: https://www.bitcoins.lc
 [btcg]
 name: BTCGuild.com
 mine_address: us.btcguild.com:8332   
-api_address: https://www.btcguild.com/pool_stats.php 
-user_api_address: https://www.btcguild.com/api.php?api_key=%(btcguild_user_apikey)s 
-api_method: json
-api_key: round_shares
+api_address: https://www.btcguild.com
+api_method: re
+api_key: shares_this_round" class="header_stat">([0-9]+)</span>
 url: https://www.btcguild.com/my_account.php
 
 [mineco]
