Changed digbit api thanks jkminkov

--- a/pools.cfg
+++ b/pools.cfg
@@ -258,9 +258,9 @@ url: http://pool.bloodys.com/?action=dashboard
 [digbtc]
 name: DigBTC.net (DigBIT)
 mine_address: digbtc.net:8332
-api_address:http://digbtc.net/
-api_method:re
-api_key:Round Shares: <b>([0-9]+)</b>
+api_address: http://digbtc.net/papi.php
+api_method: json
+api_key: shares_this_round
 url: http://www.digbtc.net/main.php
 
 [bithasher]
