Changed deepbit url:

--- a/pools.cfg
+++ b/pools.cfg
@@ -19,7 +19,7 @@ api_address: http://deepbit.net/
 api_method: re_rate
 api_key: rate:([ 0-9]+)Gh/s<
 api_strip: ' '
-url: https://deepbit.net/account
+url: https://deepbit.net/stats
 
 [ozco]
 name: OzCo.in
