Update btcpool24 url:

--- a/pools.cfg
+++ b/pools.cfg
@@ -236,6 +236,7 @@ api_address: http://www.btcpool24.com/stat.php
 api_method: re
 api_key:<br/>Round Shares:([ 0-9]+)<br/><br/></span>
 api_strip: ' '
+url: http://www.btcpool24.com
 
 [btcserv]
 name: BTCServ.net
