--- a/pools.cfg
+++ b/pools.cfg
@@ -21,6 +21,14 @@ api_key: rate:([ 0-9]+)Gh/s<
 api_strip: ' '
 url: https://deepbit.net/stats
 
+[swepool]
+name: Swepool
+mine_address: swepool.net:8337
+api_address: http://swepool.net/json?key=%(swepool_user_apikey)s
+api_method: json
+api_key: round_shares
+url: http://swepool.net/profile
+
 [ozco]
 name: OzCo.in
 mine_address: ozco.in:8332
