--- a/pools.cfg
+++ b/pools.cfg
@@ -178,10 +178,11 @@ url: https://www.bitcoins.lc
 
 [btcg]
 name: BTCGuild.com
-mine_address: us.btcguild.com:8332   
-api_address: https://www.btcguild.com/pool_stats.php 
-api_method: json
-api_key: round_shares
+mine_address: uscentral.btcguild.com:8332   
+api_address: https://www.btcguild.com/pool_stats.php
+api_method: re_rate
+api_key: "hash_rate":([ 0-9]+).
+api_strip: ' '
 url: https://www.btcguild.com/my_account.php
 
 [mineco]
