--- a/pools.cfg
+++ b/pools.cfg
@@ -293,7 +293,7 @@ url: http://www.kiwipool.me
 [itzod]
 name: Itzod.ru
 mine_address: lp1.itzod.ru:8344
-api_address: http://pool.itzod.ru/api.php
+api_address: https://pool.itzod.ru/api.php
 api_method: json
 api_key: total_shares_count
 url: http://pool.itzod.ru/index.php
