--- a/pools.cfg
+++ b/pools.cfg
@@ -40,10 +40,9 @@ url: https://ozco.in/blocks.php
 [polmine]
 name: PolMine.pl
 mine_address: polmine.pl:8347
-api_address: https://polmine.pl/?action=statistics
-api_method: re
-api_key: <b>Ilość poprawnych wszystkich: &nbsp; </b> <br/>([ 0-9]+)<br/> <br/></td>
-api_strip: ' '
+api_address: http://polmine.pl/?action=api
+api_method: re_rate
+api_key: ":"([.0-9]+).
 url: https://polmine.pl/?action=dashboardstat
 
 [mtred]
@@ -171,17 +170,18 @@ url: http://btc.x8s.de
 [bclc]
 name: Bitcoins.lc
 mine_address: bitcoins.lc:8080    
-api_address: https://www.bitcoins.lc/stats.json
-api_method: json
-api_key: round_shares
+api_address: http://www.bitcoins.lc/stats.json
+api_method: re_rate
+api_key: "hash_rate":([ 0-9]+).
 url: https://www.bitcoins.lc
 
 [btcg]
 name: BTCGuild.com
-mine_address: us.btcguild.com:8332   
-api_address: https://www.btcguild.com/pool_stats.php 
-api_method: json
-api_key: round_shares
+mine_address: uscentral.btcguild.com:8332   
+api_address: https://www.btcguild.com/pool_stats.php
+api_method: re_rate
+api_key: "hash_rate":([ 0-9]+).
+api_strip: ' '
 url: https://www.btcguild.com/my_account.php
 
 [mineco]
