Changed polmine info, added oldpolmine re, thanks eskimobob

--- a/pools.cfg
+++ b/pools.cfg
@@ -45,6 +45,15 @@ api_method: re_rate
 api_key: ":"([.0-9]+).
 url: https://polmine.pl/?action=dashboardstat
 
+[oldpolmine]
+name: PolMine.pl (old re)
+mine_address: polmine.pl:8347
+api_address: https://polmine.pl/?action=statistics
+api_method: re
+api_key: poprawnych wszystkich: &nbsp; </b> <br/>([ 0-9]+)<br/>
+api_strip: ' '
+url: https://polmine.pl/?action=dashboardstat
+
 [mtred]
 name: MtRed.com
 mine_address: mtred.com:8837
