--- a/pools.cfg
+++ b/pools.cfg
@@ -55,7 +55,7 @@ api_key_ghashrate: <b> ([\.0-9]+)</b> Ghash
 api_key_duration_day_hour_min: </b> <br/>([ 0-9]+)dni([ 0-9]+)godzin([ 0-9]+)minut
 url: https://polmine.pl/?action=dashboardstat
 
-[oldoldpolmine]
+[oldpolmine]
 name: PolMine.pl (old re)
 mine_address: polmine.pl:8347
 api_address: https://polmine.pl/?action=statistics
