pools.cfg case changes and clean-up

--- a/pools.cfg
+++ b/pools.cfg
@@ -16,7 +16,7 @@ api_key_duration_hour_min: (\d+):(\d+):
 url: http://mining.bitcoin.cz/accounts/profile/
 
 [deepbit]
-name: DeepBit
+name: DeepBit.com
 mine_address: pit.deepbit.net:8332
 api_address: http://deepbit.net/
 api_method: re_rate
@@ -25,7 +25,7 @@ api_strip: ' '
 url: https://deepbit.net/stats
 
 [swepool]
-name: Swepool
+name: SwePool.net
 mine_address: swepool.net:8337
 api_address: http://swepool.net/json?key=%(swepool_user_apikey)s
 api_method: json
@@ -56,7 +56,7 @@ api_key_duration_day_hour_min: </b> <br/>([ 0-9]+)dni([ 0-9]+)godzin([ 0-9]+)min
 url: https://polmine.pl/?action=dashboardstat
 
 [oldpolmine]
-name: PolMine.pl (old re)
+name: PolMine.pl (Old)
 mine_address: polmine.pl:8347
 api_address: https://polmine.pl/?action=statistics
 api_method: re
@@ -288,7 +288,7 @@ api_strip:','
 url: https://btcserv.net/user/stats/
 
 [bloodys]
-name: bloodys
+name: Bloodys.com
 mine_address:pool.bloodys.com:8332
 api_address:http://pool.bloodys.com/?action=statistics
 api_method:re
@@ -297,7 +297,7 @@ api_strip:','
 url: http://pool.bloodys.com/?action=dashboard
 
 [digbtc]
-name: DigBTC.net (DigBIT)
+name: DigBTC.net
 mine_address: digbtc.net:8332
 api_address: http://digbtc.net/papi.php
 api_method: json
@@ -330,7 +330,7 @@ api_key: total_shares_count
 url: http://pool.itzod.ru/index.php
 
 [btcmine]
-name: BTCmine
+name: BTCmine.com
 api_address: http://btcmine.com/stats/
 api_method:re
 api_key: <td><span id="rs_round_shares">([0-9]+)</span></td>
