--- a/pools.cfg
+++ b/pools.cfg
@@ -240,12 +240,10 @@ url: http://mining.mainframe.nl
 [bcpool]
 name: BitcoinPool.com
 mine_address: bitcoinpool.com:8334 
-api_address: http://bitcoinpool.com/pooljson.php
-api_method: json
-api_key: round_shares
-api_key_ghashrate: hashrate
-api_key_duration: round_duration
-api_key_duration_day_hour_min: (\d+):(\d+):(\d+):
+api_address: http://bitcoinpool.com
+api_method: re_rateduration
+api_key_ghashrate: Pool Speed: <d class=\"info\">([\.0-9]+) Gh/s
+api_key_duration_day_hour_min: Round Duration: <d class=\"info\">(?:([0-9]+)d&nbsp;)?([0-9]+)h&nbsp;([0-9]+)m&nbsp;
 url: http://bitcoinpool.com
 
 [unitedminers]
