--- a/pools.cfg
+++ b/pools.cfg
@@ -186,6 +186,16 @@ api_key: block</td><td>([ 0-9]+)</td>
 api_strip: ' '
 url: http://bitparking.com/user/%(user)s
 
+[nmcbit]
+name: nmcbit.com
+namecoin: Yep
+mine_address: nmcbit.com:8332
+api_address: http://nmcbit.com/statistics
+api_method: re
+api_key: Valid\s+shares\s+for\s+current\s+round:</th><td>([,0-9]+)</td>
+api_strip: ','
+url: http://nmcbit.com/dashboard
+
 [x8s]
 name: x8s.de
 mine_address: pit.x8s.de:8337
