--- a/pools.cfg
+++ b/pools.cfg
@@ -289,10 +289,9 @@ url: http://www.btcpool24.com
 [btcserv]
 name: BTCServ.net
 mine_address: btcserv.net:8335
-api_address: http://btcserv.net/
-api_method:re
-api_key:([0-9]+(,[0-9]+)*) shares
-api_strip:','
+api_address: http://btcserv.net/json/pool/
+api_method: json
+api_key: shares
 url: https://btcserv.net/user/stats/
 
 [bloodys]
