--- a/pools.cfg
+++ b/pools.cfg
@@ -268,10 +268,9 @@ url: http://www.unitedminers.com
 [bmunion]
 name: BitMinersUnion.org
 mine_address: pool.bitminersunion.org:8341
-api_address: http://67.249.146.78/stats.php
+api_address: http://www.bitminersunion.org/stats.php
 api_method: re
-api_key: Shares this round:([ 0-9]+)<br/>
-api_strip: ' '
+api_key: Shares this round:([0-9]+)<br/>
 url: http://www.bitminersunion.org/
 
 [btcpool24]
