--- a/pools.cfg
+++ b/pools.cfg
@@ -290,7 +290,7 @@ name: BTCServ.net
 mine_address: btcserv.net:8335
 api_address: http://btcserv.net/json/pool/
 api_method: json
-api_key: shares
+api_key: valid
 url: https://btcserv.net/user/stats/
 
 [bloodys]
