--- a/pools.cfg
+++ b/pools.cfg
@@ -141,8 +141,7 @@ url: https://pool.bitp.it/console
 name: NinjaCoin.com
 mine_address: mine.ninjacoin.com:8332
 api_address: https://www.ninjacoin.com/statistics.php
-api_method: re
-#can't find the share count on their site
+api_method: re_rate
 api_key:Hashrate: ([.0-9]+) Gh/s
 api_strip: '.'
 url: https://www.ninjacoin.com/account.php
