Added i0coin & i0guild support

--- a/pools.cfg
+++ b/pools.cfg
@@ -341,3 +341,11 @@ api_key: <td><span id="rs_round_shares">([0-9]+)</span></td>
 api_strip:''
 url: http://btcmine.com
 
+[i0g]
+name: i0Guild.com
+mine_address: i0.btcguild.com:8332   
+api_address: http://i0.btcguild.com/
+api_method: re_rate
+api_key: "hash_rate":([ 0-9]+).
+api_strip: ' '
+url: http://i0.btcguild.com/my_account.php
