Fix btcmine mine_address, thanks sherpishoru

--- a/pools.cfg
+++ b/pools.cfg
@@ -335,6 +335,7 @@ url: http://pool.itzod.ru/index.php
 
 [btcmine]
 name: BTCmine.com
+mine_address: btcmine.com:8332
 api_address: http://btcmine.com/stats/
 api_method:re
 api_key: <td><span id="rs_round_shares">([0-9]+)</span></td>
