--- a/pools.cfg
+++ b/pools.cfg
@@ -350,3 +350,13 @@ api_method: re_rate
 api_key: "hash_rate":([ 0-9]+).
 api_strip: ' '
 url: http://i0.btcguild.com/my_account.php
+
+[bitfarms]
+name: BitFarms.ca
+mine_address: pool.bitfarms.ca:8332 
+api_address: http://bitfarms.ca/
+api_method: re_rate
+api_key: Pool Rate:([ 0-9]+).
+api_strip: ' '
+url: http://bitfarms.ca/
+
