fixed bcmunion stats and url page.

--- a/pools.cfg
+++ b/pools.cfg
@@ -266,10 +266,10 @@ url: http://www.unitedminers.com
 [bmunion]
 name: BitMinersUnion.org
 mine_address: pool.bitminersunion.org:8341
-api_address: http://www.bitminersunion.org/stats.php
+api_address: http://pool.bitminersunion.org/stats.php
 api_method: re
 api_key: Shares this round:([0-9]+)<br/>
-url: http://www.bitminersunion.org/
+url: http://pool.bitminersunion.org
 
 [btcpool24]
 name: BTCPool24
