Updated ars api, thanks macboy80

--- a/pools.cfg
+++ b/pools.cfg
@@ -122,10 +122,9 @@ url: http://eligius.st/~artefact2/5/%(user)s
 [arsbitcoin]
 name: ArsBitcoin.com
 mine_address: arsbitcoin.com:8344
-api_address: https://arsbitcoin.com/poolstats.php
-api_method: re
-api_key: Shares this round</td><td>([,0-9]+)</td>
-api_strip: ','
+api_address: https://arsbitcoin.com/api.php
+api_method: json
+api_key: api_key: currentroundshares
 url: https://arsbitcoin.com/my_stats.php
 
 [bitp]
