--- a/pools.cfg
+++ b/pools.cfg
@@ -20,8 +20,8 @@ name: DeepBit.com
 mine_address: pit.deepbit.net:8332
 api_address: http://deepbit.net/
 api_method: re_rate
-api_key: rate:([ 0-9]+)Gh/s<
-api_strip: ' '
+api_key: [rate:&nbsp;]+([0-9]+)+&nbsp;Gh/s
+api_strip: ''
 url: https://deepbit.net/stats
 
 [swepool]
