--- a/pools.cfg
+++ b/pools.cfg
@@ -124,7 +124,7 @@ name: ArsBitcoin.com
 mine_address: arsbitcoin.com:8344
 api_address: https://arsbitcoin.com/api.php
 api_method: json
-api_key: api_key: currentroundshares
+api_key: currentroundshares
 url: https://arsbitcoin.com/my_stats.php
 
 [bitp]
