Added ABCPools to config

--- a/pools.cfg
+++ b/pools.cfg
@@ -359,3 +359,11 @@ api_key: Pool Rate:([ 0-9]+).
 api_strip: ' '
 url: http://bitfarms.ca/
 
+[abc]
+name: ABCPool.co
+mine_address: pool.ABCPool.co:8332
+api_address: http://www.abcpool.co/stats.php
+api_method: disable
+api_key: <span class="stat">([0-9.]+) GH/s</span>
+api_strip: ' '
+url: http://www.abcpool.co/stats.php
