Added Ghrate for unitedminers

--- a/pools.cfg
+++ b/pools.cfg
@@ -259,7 +259,7 @@ mine_address: pool.unitedminers.com:8332
 api_address: http://www.unitedminers.com/?action=api
 api_method: json
 api_key: validcurrentshares
-api_strip: ','
+api_key_mhashrate: hashrate
 url: http://www.unitedminers.com
 
 [bmunion]
