--- a/pools.cfg
+++ b/pools.cfg
@@ -184,7 +184,7 @@ api_strip: ' '
 url: http://bitparking.com/user/%(user)s
 
 [nmcbit]
-name: nmcbit.com
+name: NMCBit.com
 namecoin: Yep
 mine_address: nmcbit.com:8332
 api_address: http://nmcbit.com/statistics
