More cleanups and codefixes.

--- a/pools.cfg
+++ b/pools.cfg
@@ -86,8 +86,8 @@ url: https://www.rfcpool.com/account
 
 [btcmonkey]
 name: BitcoinMonkey.com
-mine_address: bitcoinmonkey.com:8332
-api_address: https://bitcoinmonkey.com/json/api.php
+mine_address: www.bitcoinmonkey.com:8332
+api_address: https://www.bitcoinmonkey.com/json/api.php
 api_method: json
 api_key: shares_this_round
 api_key_mhashrate: pool_total_mhash
