Updated some pools and added some CA certs

--- a/pools.cfg
+++ b/pools.cfg
@@ -122,7 +122,7 @@ url: http://eligius.st/~artefact2/5/%(user)s
 [arsbitcoin]
 name: ArsBitcoin.com
 mine_address: arsbitcoin.com:8344
-api_address: https://arsbitcoin.com/poolstats.php
+api_address: https://www.arsbitcoin.com/poolstats.php
 api_method: re
 api_key: Shares this round</td><td>([,0-9]+)</td>
 api_strip: ','
