Small format changes + new pools added to esp files

--- a/pools.cfg
+++ b/pools.cfg
@@ -380,6 +380,7 @@ url: http://www.namebit.org/
 
 [bitchomp]
 name: bitchomp.info
+namecoin: Yep
 mine_address: bitchomp.info:9098
 api_address: http://bitchomp.info/ncp/index.php
 api_method:re
