More caps for pools.cfg

--- a/pools.cfg
+++ b/pools.cfg
@@ -360,7 +360,7 @@ api_strip: ' '
 url: http://bitfarms.ca/
 
 [masterpool]
-name: masterpool.eu
+name: MasterPool.eu
 namecoin: Yep
 mine_address: balancer.masterpool.eu:8888
 api_address: https://masterpool.eu/api
@@ -369,7 +369,7 @@ api_key:shares
 url:https://masterpool.eu/dashboard
 
 [namebit]
-name: namebit.org
+name: NameBit.org
 namecoin: Yep
 mine_address: pool.namebit.org:10000
 api_address: http://www.namebit.org/
@@ -379,7 +379,7 @@ api_strip:' '
 url: http://www.namebit.org/
 
 [bitchomp]
-name: bitchomp.info
+name: BitChomp.info
 namecoin: Yep
 mine_address: bitchomp.info:9098
 api_address: http://bitchomp.info/ncp/index.php
