--- a/pools.cfg
+++ b/pools.cfg
@@ -396,3 +396,12 @@ api_method: disable
 api_key: <span class="stat">([0-9.]+) GH/s</span>
 api_strip: ' '
 url: http://www.abcpool.co/stats.php
+
+[p2pool]
+name: p2pool
+mine_address: localhost:8332
+api_address: http://localhost:8332
+api_method: disable
+api_key: code
+url: https://en.bitcoin.it/wiki/P2Pool
+
