--- a/pools.cfg
+++ b/pools.cfg
@@ -141,8 +141,8 @@ name: NinjaCoin.com
 mine_address: mine.ninjacoin.com:8332
 api_address: https://www.ninjacoin.com/statistics.php
 api_method: re_rate
-api_key:Hashrate: ([.0-9]+) Gh/s
-api_strip: '.'
+api_key:Hashrate:([ 0-9]+).
+api_strip: ' '
 url: https://www.ninjacoin.com/account.php
 
 [bitclockers]
