--- a/pools.cfg
+++ b/pools.cfg
@@ -139,7 +139,7 @@ url: https://pool.bitp.it/console
 [ninjac]
 name: NinjaCoin.com
 mine_address: mine.ninjacoin.com:8332
-api_address: https://www.ninjacoin.com/statistics.php
+api_address: https://www.ninjacoin.com/
 api_method: re_rate
 api_key:Hashrate:([ 0-9]+).
 api_strip: ' '
