Added percent option and a donation role which uses the option

--- a/pools.cfg
+++ b/pools.cfg
@@ -405,3 +405,10 @@ api_method: disable
 api_key: code
 url: https://en.bitcoin.it/wiki/P2Pool
 
+[donation]
+name: Donation
+mine_address: su.mining.eligius.st:8337
+role: donation
+percent: 1
+user: 1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
+pass: x
