Edited pools.cfg via GitHub

--- a/pools.cfg
+++ b/pools.cfg
@@ -301,7 +301,7 @@ url: http://pool.bloodys.com/?action=dashboard
 
 [digbtc]
 name: DigBTC.net
-mine_address: digbtc.net:8332
+mine_address: btc.digbtc.net:8332
 api_address: http://digbtc.net/papi.php
 api_method: json
 api_key: shares_this_round
