Linked Donation to blockexplorer

--- a/pools.cfg
+++ b/pools.cfg
@@ -412,3 +412,4 @@ role: donation
 percent: 1
 user: 1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 pass: x
+url: http://blockexplorer.com/address/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
