--- a/pools.cfg
+++ b/pools.cfg
@@ -412,4 +412,6 @@ role: donation
 percent: 1
 user: 1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 pass: x
-url: http://blockexplorer.com/address/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
+# We have a vote on irc on what the address should be
+# url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC - nice graphs
+# url: http://blockexplorer.com/address/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC - total donations
