Added some more config descriptions

--- a/bh.cfg
+++ b/bh.cfg
@@ -3,14 +3,14 @@
 # Non-runtime configurable:
 #    main/scheduler
 #    main/port
-#    vackdoor/port
+#    backdoor/port
 
 [main]
 #port = 8337
 scheduler = DefaultScheduler
 #scheduler = AltSliceScheduler
 delag_sleep = 20
-pool_refreshlimit = 120
+pool_refreshlimit = 120 # time in seconds to refresh pool stats
 
 [auth]
 #username = user
@@ -34,5 +34,5 @@ irc_server = 'irc.bithopper.org'
 irc_port = 6667
 irc_channel = '#bithopper-lp'
 run_interval = 15
-min_votes = 5
-vote_threshold = 0.5 # probably not a good idea to set below 0.5
+min_votes = 5 # min votes before votes are considered
+vote_threshold = 0.5 # (0.5 == 50% of votes for a quorum) probably not a good idea to set below 0.5
