Fix config loading and reloading. Add some DeafultScheduler config items (slicesize)

--- a/bh.cfg
+++ b/bh.cfg
@@ -10,11 +10,16 @@
 scheduler = DefaultScheduler
 #scheduler = AltSliceScheduler
 delag_sleep = 20
-pool_refreshlimit = 120 # time in seconds to refresh pool stats
+# time in seconds to refresh pool stats
+pool_refreshlimit = 120
+threshold = 0.46
 
 [auth]
 #username = user
 #password = pass
+
+[defaultscheduler]
+slicesize = 30
 
 # not working yet
 [altslice]
@@ -34,5 +39,7 @@ irc_server = 'irc.bithopper.org'
 irc_port = 6667
 irc_channel = '#bithopper-lp'
 run_interval = 15
-min_votes = 5 # min votes before votes are considered
-vote_threshold = 0.5 # (0.5 == 50% of votes for a quorum) probably not a good idea to set below 0.5
+# min votes before votes are considered
+min_votes = 5
+# (0.5 == 50% of votes for a quorum) probably not a good idea to set below 0.5
+vote_threshold = 0.5
