--- a/pools.cfg
+++ b/pools.cfg
@@ -415,3 +415,48 @@ pass: x
 # We have a vote on irc on what the address should be
 # url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC - nice graphs
 # url: http://blockexplorer.com/address/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC - total donations
+
+[scguild]
+name: scGuild.com
+mine_address: sc.btcguild.com:8332   
+api_address: http://sc.btcguild.com/
+api_method: re_rate
+api_key: ([0-9]+)\.([0-9]+) GH/s</span></td> 
+re_rate_type: GH
+api_strip: ' '
+url: http://sc.btcguild.com/my_account.php
+
+[sodigbtc]
+name: s0DigBTC.net
+mine_address: sobtc.digbtc.net:8332
+api_address: http://sobtc.digbtc.net/papi.php
+api_method: json
+api_key: shares_this_round
+url: http://sobtc.digbtc.net/main.php
+
+[scbitparking]
+name: scBitParking.com
+mine_address: scpool.bitparking.com:12098
+api_address: http://scpool.bitparking.com/user
+api_method: re
+api_key: Total Pool Shares</td><td>([0-9]+)
+api_strip: ' '
+url: http://bitparking.com/user/%(user)s
+
+[squid]
+name: SquidNet
+mine_address: pool.squidnet.org:8341
+api_address: http://pool.squidnet.org/api
+api_method: json
+api_key: shares_this_round
+url: http://pool.squidnet.org
+
+[mine4us]
+name: mine-for.us
+mine_address: go.mine-for.us:16101
+api_address: http://solid.mine-for.us/index.php?page=round
+api_method: re
+api_key: <td>Valid shares this round: </td><td>([0-9]+)</td>
+api_strip: ' '
+url: http://solid.mine-for.us/index.php?page=withdraw
+
