--- a/pools.cfg
+++ b/pools.cfg
@@ -250,7 +250,7 @@ mine_address: bitcoinpool.com:8334
 api_address: http://bitcoinpool.com
 api_method: re_rateduration
 api_key_ghashrate: <p class="title">.*Pool Speed: <d class=\"info\">([\.0-9]+) Gh/s
-api_key_duration_day_hour_min: <p class="title">.*Round Duration: <d class=\"info\">(?:([0-9]+)d&nbsp;)?(?:([0-9]+)h&nbsp;)?([0-9]+)m&nbsp;
+api_key_duration_day_hour_min: <p class="title">Round Duration: <d class="info">(?:([0-9]+)d&nbsp;)?(?:([0-9]+)h&nbsp;)?(?:([0-9]+)m&nbsp;)?
 url: http://bitcoinpool.com
 
 [unitedminers]
