--- a/pools.cfg
+++ b/pools.cfg
@@ -174,7 +174,7 @@ api_key_mhashrate: speed
 url: http://poolmunity.com
 
 [bitparking]
-name: BitParking.com
+name: BitParking.com (nmc)
 namecoin: Yep
 mine_address: bitparking.com:9098
 api_address: http://bitparking.com/pool
@@ -342,7 +342,7 @@ api_strip:''
 url: http://btcmine.com
 
 [i0g]
-name: i0Guild.com
+name: i0Guild.com (i0c)
 mine_address: i0.btcguild.com:8332   
 api_address: http://i0.btcguild.com/
 api_method: re_rate
@@ -360,7 +360,7 @@ api_strip: ' '
 url: http://bitfarms.ca/
 
 [masterpool]
-name: masterpool.eu
+name: masterpool.eu (nmc)
 namecoin: Yep
 mine_address: balancer.masterpool.eu:8888
 api_address: https://masterpool.eu/api
@@ -369,7 +369,7 @@ api_key:shares
 url:https://masterpool.eu/dashboard
 
 [namebit]
-name: namebit.org
+name: namebit.org (nmc)
 namecoin: Yep
 mine_address: pool.namebit.org:10000
 api_address: http://www.namebit.org/
@@ -379,7 +379,7 @@ api_strip:' '
 url: http://www.namebit.org/
 
 [bitchomp]
-name: bitchomp.info
+name: bitchomp.info (nmc)
 namecoin: Yep
 mine_address: bitchomp.info:9098
 api_address: http://bitchomp.info/ncp/index.php
@@ -417,7 +417,7 @@ pass: x
 # url: http://blockexplorer.com/address/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC - total donations
 
 [scguild]
-name: scGuild.com
+name: scGuild.com (scc)
 mine_address: sc.btcguild.com:8332   
 api_address: http://sc.btcguild.com/
 api_method: re_rate
@@ -427,7 +427,7 @@ api_strip: ' '
 url: http://sc.btcguild.com/my_account.php
 
 [sodigbtc]
-name: s0DigBTC.net
+name: s0DigBTC.net (scc)
 mine_address: sobtc.digbtc.net:8332
 api_address: http://sobtc.digbtc.net/papi.php
 api_method: json
@@ -435,7 +435,7 @@ api_key: shares_this_round
 url: http://sobtc.digbtc.net/main.php
 
 [scbitparking]
-name: scBitParking.com
+name: scBitParking.com (scc)
 mine_address: scpool.bitparking.com:12098
 api_address: http://scpool.bitparking.com/user
 api_method: re
@@ -444,7 +444,7 @@ api_strip: ' '
 url: http://bitparking.com/user/%(user)s
 
 [squid]
-name: SquidNet
+name: SquidNet (scc)
 mine_address: pool.squidnet.org:8341
 api_address: http://pool.squidnet.org/api
 api_method: json
@@ -452,7 +452,7 @@ api_key: shares_this_round
 url: http://pool.squidnet.org
 
 [mine4us]
-name: mine-for.us
+name: mine-for.us (scc)
 mine_address: go.mine-for.us:16101
 api_address: http://solid.mine-for.us/index.php?page=round
 api_method: re
@@ -461,17 +461,16 @@ api_strip: ' '
 url: http://solid.mine-for.us/index.php?page=withdraw
 
 [poolmunitynmc]
-name: PoolMunity.com (NameCoin Pool)
+name: PoolMunity.com (nmc)
 namecoin: Yep
 mine_address: poolmunity.com:18332
 api_address: https://poolmunity.com/api.php?server
-api_method: re
-api_key: {"speed":[0-9]+,"connectedWorkers":[0-9]+,"lastBlock":[0-9]+,"totalShares":[0-9]+,"roundStarted":[0-9]+,"0":{"speed":[0-9]+,"connectedWorkers":[0-9]+,"lastBlock":[0-9]+,"totalShares":([0-9]+),"roundStarted":[0-9]+}}
-#api_key_mhashrate: speed
+api_method: json
+api_key: totalShares
 url: http://poolmunity.com
 
 [ixparking]
-name: BitParking.com (IXCoin pool)
+name: BitParking.com (ixc)
 mine_address: ixpool.bitparking.com:10098
 api_address: http://ixpool.bitparking.com/pool
 api_method: re
@@ -480,7 +479,7 @@ api_strip: ' '
 url: http://ixpool.bitparking.com/user/%(user)s
 
 [i0parking]
-name: BitParking.com (I0Coin pool)
+name: BitParking.com (i0c)
 mine_address: i0pool.bitparking.com:11098
 api_address: http://i0pool.bitparking.com/pool
 api_method: re
@@ -488,36 +487,11 @@ api_key: block</td><td>([ 0-9]+)</td>
 api_strip: ' '
 url: http://i0pool.bitparking.com/user/%(user)s
 
-[scparking]
-name: BitParking.com (SolidCoin pool)
-mine_address: scpool.bitparking.com:12098
-api_address: http://scpool.bitparking.com/pool
-api_method: re
-api_key: block</td><td>([ 0-9]+)</td>
-api_strip: ' '
-url: http://scpool.bitparking.com/user/%(user)s
-
-[scg]
-name: SC Guild.com
-mine_address: sc.btcguild.com:8332   
-api_address: http://sc.btcguild.com/
-api_method: re_rate
-api_key: "hash_rate":([ 0-9]+).
-api_strip: ' '
-url: http://sc.btcguild.com/my_account.php
-
 [digi0c]
-name: DigBTC.net (I0coin pool)
+name: DigBTC.net (i0c)
 mine_address: i0.digbtc.net:8382
 api_address: http://i0.digbtc.net/papi.php
 api_method: json
 api_key: shares_this_round
 url: http://i0.digbtc.net/main.php
 
-[digsc]
-name: DigBTC.net (SolidCoin pool)
-mine_address: sc.digbtc.net:8382
-api_address: http://sc.digbtc.net/papi.php
-api_method: json
-api_key: shares_this_round
-url: http://sc.digbtc.net/main.php
