Added mtred pps to cfg

--- a/pools.cfg
+++ b/pools.cfg
@@ -73,6 +73,15 @@ api_key: server,roundshares
 api_key_ghashrate: server,hashrate
 url: https://mtred.com/user/profile.html
 
+[mtredpps]
+name: MtRed.com (PPS)
+mine_address: mtred.com:8837
+api_address: https://mtred.com/api/user/key/%(mtred_user_apikey)s
+api_method: json
+api_key: server,roundshares
+api_key_ghashrate: server,hashrate
+url: https://mtred.com/user/profile.html
+
 [rfc]
 name: RFCPool.com
 mine_address: pool.rfcpool.com:8332 
