--- a/pools.cfg
+++ b/pools.cfg
@@ -134,6 +134,7 @@ mine_address: arsbitcoin.com:8344
 api_address: https://www.arsbitcoin.com/api.php
 api_method: json
 api_key: currentroundshares
+api_key_mhashrate: hashrate
 url: https://arsbitcoin.com/my_stats.php
 
 [bitp]
