--- a/pools.cfg
+++ b/pools.cfg
@@ -295,10 +295,15 @@ url: http://www.btcpool24.com
 [btcserv]
 name: BTCServ.net
 mine_address: btcserv.net:8335
-api_address: http://btcserv.net/json/pool/
-api_method: json
-api_key: valid
-url: https://btcserv.net/user/stats/
+#api_address: http://btcserv.net/json/pool/
+#api_method: json
+#api_key: valid
+#url: https://btcserv.net/user/stats/
+api_address: http://btcserv.net
+api_method: re
+api_key: </span> ([,0-9]+) shares
+api_strip: ","
+url: https://btcserv.net/user/round-stats/
 
 [bloodys]
 name: Bloodys.com
