--- a/pools.cfg
+++ b/pools.cfg
@@ -427,9 +427,7 @@ role: donation
 percent: 1
 user: 1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 pass: x
-# We have a vote on irc on what the address should be
-# url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC - nice graphs
-# url: http://blockexplorer.com/address/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC - total donations
+url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC - nice graphs
 
 [scguild]
 name: scGuild.com (scc)
