--- a/pools.cfg
+++ b/pools.cfg
@@ -427,7 +427,7 @@ role: donation
 percent: 1
 user: 1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 pass: x
-url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC - nice graphs
+url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 
 [scguild]
 name: scGuild.com (scc)
