Upd btcg mine address, thanks itstooez

--- a/pools.cfg
+++ b/pools.cfg
@@ -222,7 +222,7 @@ url: https://www.bitcoins.lc
 
 [btcg]
 name: BTCGuild.com
-mine_address: uscentral.btcguild.com:8332   
+mine_address: btcguild.com:8332   
 api_address: https://www.btcguild.com/pool_stats.php
 api_method: re_rate
 api_key: "hash_rate":([ 0-9]+).
