--- a/pools.cfg
+++ b/pools.cfg
@@ -305,6 +305,19 @@ api_key: </span> ([,0-9]+) shares
 api_strip: ","
 url: https://btcserv.net/user/round-stats/
 
+[btcservpps]
+name: BTCServ.net (PPS)
+mine_address: btcserv.net:8335
+#api_address: http://btcserv.net/json/pool/
+#api_method: json
+#api_key: valid
+#url: https://btcserv.net/user/stats/
+api_address: http://btcserv.net
+api_method: re
+api_key: </span> ([,0-9]+) shares
+api_strip: ","
+url: https://btcserv.net/user/round-stats/
+
 [bloodys]
 name: Bloodys.com
 mine_address:pool.bloodys.com:8332
