--- a/pools.cfg
+++ b/pools.cfg
@@ -422,11 +422,14 @@ url: https://en.bitcoin.it/wiki/P2Pool
 
 [donation]
 name: Donation
-mine_address: su.mining.eligius.st:8337
 role: donation
 percent: 1
+mine_address: su.mining.eligius.st:8337
 user: 1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
-pass: x
+#Alternate donation pool
+#mine_address: arsbitcoin.com:8344
+#user: c00w.donation
+pass: donation
 url: http://eligius.st/~artefact2/5/1JWfjCGuAQdJ3GsjtCJNmRsyWGb6kmx9zC
 
 [scguild]
