Fixed nmcbit stats page

--- a/pools.cfg
+++ b/pools.cfg
@@ -197,7 +197,7 @@ url: http://bitparking.com/user/%(user)s
 name: NMCBit.com
 namecoin: Yep
 mine_address: nmcbit.com:8332
-api_address: http://nmcbit.com/statistics
+api_address: http://www.nmcbit.com/statistics
 api_method: re
 api_key: Valid\s+shares\s+for\s+current\s+round:</th><td>([,0-9]+)</td>
 api_strip: ','
