--- a/pools.cfg
+++ b/pools.cfg
@@ -450,9 +450,8 @@ name: scGuild.com (scc)
 mine_address: sc.btcguild.com:8332   
 api_address: http://sc.btcguild.com/
 api_method: re_rate
-api_key: ([0-9]+)\.([0-9]+) GH/s</span></td> 
-re_rate_type: GH
-api_strip: ' '
+api_key: _stat">([0-9]+).
+api_strip: ''
 url: http://sc.btcguild.com/my_account.php
 
 [sodigbtc]
