--- a/pools.cfg
+++ b/pools.cfg
@@ -257,10 +257,10 @@ url: http://mining.mainframe.nl
 [bcpool]
 name: BitcoinPool.com
 mine_address: bitcoinpool.com:8334 
-api_address: http://bitcoinpool.com
-api_method: re_rateduration
-api_key_ghashrate: <p class="title">.*Pool Speed: <d class=\"info\">([\.0-9]+) Gh/s
-api_key_duration_day_hour_min: <p class="title">Round Duration: <d class="info">(?:([0-9]+)d&nbsp;)?(?:([0-9]+)h&nbsp;)?(?:([0-9]+)m&nbsp;)?
+api_address: http://bitcoinpool.com/index.php?do=currentround
+api_method: re_shareestimate
+api_key_shares: <td width="80"> (\d+)</td>
+api_key_estimate: <td width="120" align="center"><img src="btc.png" border="0" alt="BTC">&nbsp;([\.0-9]+)</td>
 url: http://bitcoinpool.com
 
 [unitedminers]
