Disable LP for digbtc.net

--- a/pools.cfg
+++ b/pools.cfg
@@ -329,6 +329,7 @@ url: http://pool.bloodys.com/?action=dashboard
 
 [digbtc]
 name: DigBTC.net
+lp_address:INVALID
 mine_address: btc.digbtc.net:8332
 api_address: http://digbtc.net/papi.php
 api_method: json
