btcworld api fix

--- a/pools.cfg
+++ b/pools.cfg
@@ -107,7 +107,7 @@ name: BTCWorld.de
 mine_address: btcworld.de:8332
 api_address: http://btcworld.de/statistics
 api_method: re
-api_key: Verifizierte\s+Anteile\s+der\s+aktuellen\s+Runde:</th><td>([,0-9]+)</td>
+api_key: [Verifizierte Anteile der aktuellen Runde:]+</th><td>([,0-9]+)</td>
 api_strip: ','
 url: http://btcworld.de/dashboard
 
