--- a/pools.cfg
+++ b/pools.cfg
@@ -257,10 +257,15 @@ url: http://mining.mainframe.nl
 [bcpool]
 name: BitcoinPool.com
 mine_address: bitcoinpool.com:8334 
-api_address: http://bitcoinpool.com/index.php?do=currentround
-api_method: re_shareestimate
-api_key_shares: <td width="80"> (\d+)</td>
-api_key_estimate: <td width="120" align="center"><img src="btc.png" border="0" alt="BTC">&nbsp;([\.0-9]+)</td>
+#api_address: http://bitcoinpool.com/index.php?do=currentround
+#api_method: re_shareestimate
+#api_key_shares: <td width="80"> (\d+)</td>
+#api_key_estimate: <td width="120" align="center"><img src="btc.png" border="0" alt="BTC">&nbsp;([\.0-9]+)</td>
+api_address: http://bitcoinpool.com/pooljson.php
+api_method: json
+api_key: round_shares
+api_key_ghashrate: hashrate
+api_key_duration: round_duration
 url: http://bitcoinpool.com
 
 [unitedminers]
