--- a/pools.cfg
+++ b/pools.cfg
@@ -229,6 +229,17 @@ api_key: "hash_rate":([ 0-9]+).
 api_strip: ' '
 url: https://www.btcguild.com/my_account.php
 
+[btcgpps]
+name: BTCGuild.com (PPS)
+mine_address: pps.btcguild.com:8332   
+api_address: http://pps.btcguild.com/
+api_method: disable
+#api_method: re_rate
+#re_rate_type: mhash # ?
+#api_key: <td>([,0-9]+).[/sec</td>]
+#api_strip: ','
+url: https://pps.btcguild.com/my_account.php
+
 [mineco]
 name: MineCo.in
 mine_address: mineco.in:3000 
