Default bh.cfg configuration added with comments Switch from using work.py to urllib2 (easier to use timeouts) Add btcmp Add mmf Add bcpool Fix bitp Fix itzod Fix blockexplorer when returning None when looking up block by txid

--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -3,6 +3,8 @@
 # url - URL for block stats
 # search - search string reference to blockexplorer
 # mode - b for blocknumber, h for blockhash, g for transaction id (default is 'b' if not present)
+#
+# type = mmf/btcmp are special parsers for those pools, see poolblocks.py for more information
 
 [btcg]
 url = https://www.btcguild.com/blocks.php
@@ -29,7 +31,7 @@ search = href="http://blockexplorer.com/b/([0-9]+)"
 
 [bitp]
 url = https://pool.bitp.it/rounds
-search = http://(blockexplorer|pident.artefact2).com/b/([0-9]+)"
+search = http://.*.com/b/([0-9]+)"
 
 [triple]
 url = https://www.triplemining.com/stats
@@ -53,7 +55,7 @@ search = http://blockexplorer.com/block/(.+)'>[0-9\.]+</a
 mode = h
 
 [eligius]
-url = http://eligius.st/~artefact2/blocks/
+url = http://eligius.st/~artefact2/
 search = title="([0-9a-fA-F]{64})"
 mode = h
 
@@ -69,5 +71,27 @@ mode = g
 
 [itzod]
 url = http://pool.itzod.ru/blocks.php
-search = getblock.php?block=([0-9a-f]+)
+search = getblock.php\?block=([a-z0-9]+)
 mode = g
+
+[bcpool]
+url = http://bitcoinpool.com/index.php?do=blocks
+search = do=blockdetails&id=([0-9]+)
+mode = b
+
+[mmf]
+auth_url = http://mining.mainframe.nl/login
+url = http://mining.mainframe.nl/statsAuth
+search = href="http://blockexplorer.com/b/([0-9]+)"
+type = mmf
+user = fruitcup
+pass = AspErjNfde2
+mode = b
+
+[btcmp]
+url = http://btcmp.com/blocklist
+search = None
+mode = z
+type = btcmp
+json_url = http://btcmp.com/methods/pool/list_blocks
+
