blockaccuracy plugin poolblock fixes Util for ratelimited URL retrieve Use rate limiting url fetcher Return plugin object so that it's accessable via the bitHopper instance. Useful for providing data to website

--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -81,7 +81,7 @@ mode = b
 
 [mmf]
 auth_url = http://mining.mainframe.nl/login
-url = http://mining.mainframe.nl/statsAuth
+url = http://mining.mainframe.nl/blocksAuth
 search = href="http://blockexplorer.com/b/([0-9]+)"
 type = mmf
 user = fruitcup
