changed namebit url to include username

--- a/pools.cfg
+++ b/pools.cfg
@@ -421,7 +421,7 @@ api_address: http://www.namebit.org/
 api_method:re
 api_key:<td id="current_share_count">([0-9]+)</td>
 api_strip:' '
-url: http://www.namebit.org/
+url: http://www.namebit.org/details?username=%(user)s
 
 [bitchomp]
 name: BitChomp.info (nmc)
