--- a/pools.cfg
+++ b/pools.cfg
@@ -117,7 +117,7 @@ mine_address: eu1.triplemining.com:8344
 api_address: http://api.triplemining.com/json/stats
 api_method: json
 api_key: solved
-url: https://www.triplemining.com/stats
+url: https://www.triplemining.com/account
 
 [eligius]
 name: Eligius.st
